Jobs now properly receive true/false arguments. Fix images being aggressively cached

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -21,7 +21,8 @@ http {
 
     access_log  /dev/stdout  main;
 
-    sendfile        on;
+    open_file_cache off;
+    sendfile off;
 
     keepalive_timeout  65;
 
@@ -41,11 +42,15 @@ http {
 
       location /mnt/ {
         autoindex on;
+        expires off;
+        add_header Cache-Control "no-store, must-revalidate" always;
         alias /mnt/;
       }
 
       location /.snowstream/ {
         autoindex on;
+        expires off;
+        add_header Cache-Control "no-store, must-revalidate" always;
         alias /mnt/.snowstream/;
       }
     }
