--- a/expo/android/app/build.gradle
+++ b/expo/android/app/build.gradle
@@ -96,10 +96,10 @@ android {
     namespace 'com.simplepathstudios.snowstream'
     defaultConfig {
         applicationId 'com.simplepathstudios.snowstream'
-        minSdkVersion 26
+        minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.3.16"
+        versionName "1.3.17"
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
     }
