--- a/expo/android/build.gradle
+++ b/expo/android/build.gradle
@@ -5,6 +5,14 @@ buildscript {
     google()
     mavenCentral()
   }
+
+  ext {
+    ndkVersion = "29.0.14206865"
+    buildToolsVersion = "36.1.0"
+    targetSdkVersion = 36
+    compileSdkVersion = 36
+    minSdkVersion = 26
+  }
   dependencies {
     classpath('com.android.tools.build:gradle')
     classpath('com.facebook.react:react-native-gradle-plugin')
