--- a/expo/android/gradle.properties
+++ b/expo/android/gradle.properties
@@ -10,7 +10,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1024m -XX:MetaspaceSize=512m -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -63,3 +63,8 @@ expo.useLegacyPackaging=false
 # Specifies whether the app is configured to use edge-to-edge via the app config or plugin
 # WARNING: This property has been deprecated and will be removed in Expo SDK 55. Use `edgeToEdgeEnabled` or `react.edgeToEdgeEnabled` to determine whether the project is using edge-to-edge.
 expo.edgeToEdgeEnabled=true
+
+android.minSdkVersion=26
+android.compileSdkVersion=36
+android.targetSdkVersion=36
+android.buildToolsVersion=36.1.0
