--- a/expo/app.json
+++ b/expo/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "version": "1.3.16",
+    "version": "1.3.17",
     "scheme": "com.simplepathstudios.snowstream",
     "newArchEnabled": true,
     "plugins": [
@@ -16,7 +16,12 @@
         "expo-build-properties",
         {
           "android": {
-            "usesCleartextTraffic": true
+            "usesCleartextTraffic": true,
+            "compileSdkVersion": 36,
+            "targetSdkVersion": 36,
+            "minSdkVersion": 26,
+            "buildToolsVersion": "36.1.0",
+            "ndkVersion": "29.0.14206865"
           },
           "ios": {}
         }
