--- a/expo/package.json
+++ b/expo/package.json
@@ -12,7 +12,7 @@
         "expo-libmpv": "^0.3.12",
         "expo-linking": "8.0.8",
         "expo-secure-store": "15.0.7",
-        "expo-snowui": "1.5.29",
+        "expo-snowui": "^1.6.0",
         "expo-splash-screen": "31.0.10",
         "expo-toast": "1.0.3",
         "react": "19.1.0",
