--- a/expo/app.json
+++ b/expo/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "version": "1.4.8",
+    "version": "1.4.9",
     "scheme": "com.simplepathstudios.snowstream",
     "newArchEnabled": true,
     "plugins": [
@@ -11,6 +11,9 @@
         }
       ],
       "expo-secure-store",
+      [
+        "expo-navigation-bar"
+      ],
       "react-native-video",
       [
         "expo-build-properties",
