Upgrade mpv to prevent max 11 video crash. Improve hd 10 playback experience

--- a/expo/package.json
+++ b/expo/package.json
@@ -1,6 +1,6 @@
 {
     "name": "snowstream",
-    "version": "1.4.37",
+    "version": "1.4.38",
     "dependencies": {
         "@sentry/react-native": "7.2.0",
         "axios": "1.12.2",
@@ -8,7 +8,7 @@
         "expo-build-properties": "1.0.10",
         "expo-constants": "18.0.12",
         "expo-keep-awake": "15.0.8",
-        "expo-libmpv": "^0.5.11",
+        "expo-libmpv": "0.5.12",
         "expo-linking": "8.0.10",
         "expo-secure-store": "15.0.8",
         "expo-snowui": "1.6.31",
